welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: type mismatch;
 found   : Unit
 required: Boolean
	while (x=0) {x=0}
                ^golomb:3: error: type mismatch;
 found   : Unit
 required: Int
	while (x=0) {x=0}
        ^