welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var x:Int = 0
	while (x=0) {x=0}
	
}
